crates/swc/tests/tsc-references/mergedInterfacesWithInheritedPrivates_es2015.1.normal.js
class C {
}
class D {
}
class E {
}
var a;
var r = a.x; // error
